# mapreduce-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
mrapps-wc/: Cargo.toml
mrapps-wc/src/: lib.rs
proto/: mr.proto  mr.rs
scripts/: run_workers.sh
src/: lib.rs
src/mr/: coordinator.rs  mod.rs  worker.rs
src/mrapps/: wc.rs
src/util/: condvar.rs  mod.rs  net.rs
