[package]
name = "mapreduce-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mrsequential"
path = "src/bin/mrsequential.rs"

[[bin]]
name = "mrcoordinator"
path = "src/bin/mrcoordinator.rs"

[[bin]]
name = "mrworker"
path = "src/bin/mrworker.rs"

[workspace] 
members = [
    "mrapps-wc",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.14.0", features = ["full"] }
async-stream = "0.2"

[build-dependencies]
tonic-build = "0.6"
